Rename devcontainer from 'nixpkgs' to 'projects-portfolio'

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nixpkgs",
+  "name": "projects-portfolio",
   "image": "mcr.microsoft.com/devcontainers/universal:2-linux",
   "features": {
     "ghcr.io/devcontainers/features/nix:1": {
