--- a/config.yaml
+++ b/config.yaml
@@ -2,19 +2,14 @@ baseURL: "http://projects.chxp.dev/"
 languageCode: en-us
 title: "chxp.dotdev project portfolio"
 theme: dead-simple
+enableGitInfo: true
 
-# menu:
-#   main:
-#     - name: "<u>H</u>ome"
-#       url: /
-#       weight: 1
-#     - name: "<u>A</u>bout"
-#       url: "/about"
-#       weight: 2
-#     - name: "<u>P</u>rojects"
-#       url: "/projects"
-#       weight: 3
-
+menu:
+  main:
+    - name: "<u>H</u>ome"
+      url: /
+      weight: 1
+      
 params:
   author:
     name: chxp
@@ -25,9 +20,10 @@ params:
 markup:
   highlight:
     codeFences: true
-    style: bw
+    style: evergarden
+    lineNos: true
     lineNumbersInTable: false
-    noClasses: false
+    noClasses: true
     goldmark:
       extensions:
         passthrough:
@@ -55,7 +51,3 @@ outputs:
 services:
   rss:
     limit: -1
-
-module:
-  imports:
-    - path: github.com/hugomods/images
